# RosieLLM

./: .gitignore  LICENSE  README.md  RosieJob.py  RosieLLM.py  RosieSSH.py  pyproject.toml  setup.py
rosiellm/: RosieJob.py  RosieLLM.py  RosieSSH.py  __init__.py
rosiellm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_lib.ipynb
