[tool.poetry]
name = "rosiellm"
version = "0.1.0"
description = "A project for RosieLLM"
authors = ["Aiden Miller [milleraa@msoe.edu, aiden5077@gmail.com]"]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.10.2"
paramiko = "^2.7.2"
cryptography = "^3.4.7"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"