[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rosiellm"
version = "0.1.0"
description = "A project for RosieLLM"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [{name = "Aiden Miller"}]
license = {text = "Apache License"}
urls = {homepage = "https://github.com/a-miller77/RosieLLM"}

requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License",
    "Operating System :: OS Independent",
]

dependencies = [
    "openai>=0.10.2,<1.0",
    "paramiko==2.7.2",
    "cryptography==3.4.7",
    "python-dotenv==0.19.2",
    "requests==2.26.0",
]

[tool.setuptools.packages.find]
where = ["rosiellm"]
