[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rosiellm"
version = "0.1.1"
description = "A project for RosieLLM"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [{name = "Aiden Miller"}]
license = {text = "Apache License"}
urls = {homepage = "https://github.com/a-miller77/RosieLLM"}

requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License",
    "Operating System :: OS Independent",
]

dependencies = [
    "openai>=1.57.3",
    "paramiko>=3.5.0",
    "cryptography>=44.0.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

[tool.setuptools.packages.find]
where = ["."]
